--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;    
+}    
 input{
     width: 381px;
     height: 96px;
@@ -24,11 +27,12 @@ input{
     border-right: 0;
     border-radius: 12px;
     font-size: 26px;
+    /*font-family: Monaco;*/
     border-width: 4px;
 }
 .regbuttons{
     width: 93px;
-    height: 54px; 
+    height: 56px; 
 }
 .zero{
     width: 194px;
@@ -36,7 +40,7 @@ input{
 }
 .equals{
     width: 93px;
-    height: 112px;
+    height: 116px;
 }
 .lastRow{
     margin-top: -57px;
