Graphing Calc only error

--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -10,6 +10,7 @@ input{
     background-color: #eaf5bc;
     border-radius: 12px;
     border-width: 5px;
+    font-size: 70px;
 }
 #fullCalc{
     width: 424px;
