--- a/graphcalc.css
+++ b/graphcalc.css
@@ -2,6 +2,15 @@
     background-color: #F0FFF0;
     border: 2px solid black;
 }
-#fxInput{
-    width: 90%;
+/*#fxInput{
+}*/
+#fxDiv{
+    width: 100%;
+}
+#minMaxDiv{
+    width: 50%;
+}
+
+.graphcalc{
+    width: 306px;
 }
