--- a/FinalCalc/FinalCalc.css
+++ b/FinalCalc/FinalCalc.css
@@ -1,17 +1,23 @@
+
 #totalCalc{
     background-color: #b8b8b8;
 	border-radius: 30px;
 	width: 460px;
 	height: 1000px;
-	float: right;
-	margin-right: -460px;
+	margin-left: -230px;
+	left: 50%;
+	position: absolute;
 	overflow: hidden;
+	float:left;
+	opacity: 0;
 }
 
 .widget{
-	float:right;
-	width: 200px;
-	height: 200px;
+	margin-left: -230px;
+	left: 50%;
+	position: absolute;
+	width: 460px;
+	height: 460px;
 }
 
 /*------------------graphCalc CSS*--------------*/
@@ -26,6 +32,7 @@ h1{
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
+	overflow: hidden;
 
 }
 .graphcalc canvas{
@@ -42,19 +49,30 @@ h1{
 }
 #fx{
 	float:left;
-	width: 10%;
+	width: 20%;
 	font-size: 22px;
 	font-weight: bold;
 }
 #fxInput{
-	float:right;
-	width: 90%;
+	float:left;
+	width: 80%;
 }
+/*#plotClear{
+	float: right;
+	width: 20%;
+	height: 35px;
+	margin: 0;
+	position: relative;
+}*/
 #fxDiv{
     width: 100%;
+/*    height: 35px;*/
+    margin: 1 0 1 0;
 }
 #minMaxDiv{
-    width: 100%
+    width: 100%;
+/*    height: 35px;*/
+    margin: 1 0 1 0;
 }
 #xyVal{
 	width: 100%;
@@ -75,18 +93,22 @@ h1{
 }
 #minXInput{
 	width: 20%;
+	margin: 0;
 	float: left;
 	position: relative;
 }
 #maxXInput{
 	width: 20%;
+	margin: 0;
 	float: left;
 	position: relative;
 }
 #plotButton{
-	width:20%;
+	width: 20%;
+	height: 40px;
 	position: relative;
 	float: right;
+	margin: 0;
 }
 
 .text{
@@ -156,6 +178,6 @@ body{
 p{
     margin-top: 56px;
 }
-/*#invButton{
+#invButton{
 
-}*/
+}
