--- a/FinalCalc/FinalCalc.css
+++ b/FinalCalc/FinalCalc.css
@@ -1,7 +1,7 @@
 
 #totalCalc{
     background-color: #b8b8b8;
-	border-radius: 30px;
+    border-radius: 30px;
 	width: 460px;
 	height: 1000px;
 	margin-left: -230px;
@@ -75,6 +75,7 @@ h1{
     margin: 1 0 1 0;
 }
 #xyVal{
+	margin-top: 2px;
 	width: 100%;
 }
 #minXText{
@@ -105,7 +106,7 @@ h1{
 }
 #plotButton{
 	width: 20%;
-	height: 40px;
+	height: 37px;
 	position: relative;
 	float: right;
 	margin: 0;
@@ -129,7 +130,7 @@ body{
     margin-bottom: 16px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0;
+    margin-top: 3px;
     background-color: #eaf5bc;
     border-radius: 12px;
     border-width: 5px;
