--- a/web-inspector.css
+++ b/web-inspector.css
@@ -1,9 +1,16 @@
+body{
+  background-color:#000000;
+}
+#wrapper{
+  top: 300px;
+}
+
 .inspector {
   width: 100%;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
-  height: 315px;
+  height: 300px;
   background-color: white;
   z-index: 1000;
   padding: 0;
@@ -64,4 +71,13 @@
 }
 
 .inspector .property-editor .property-list {
+}
+.highlighted{
+  border: 2px solid red;
+}
+.advice{
+  color: #A2122F;
+  font-size: 16pt;
+  text-align: center;
+  font-style: brandon, arial, sans-serif;
 }
