--- a/Day 9/knapsack.css
+++ b/Day 9/knapsack.css
@@ -93,3 +93,27 @@
 	margin-left: 750px;
 	margin-top: 410px;
 }
+#bag{
+	height: 350px;
+	margin-left: 80px;
+	margin-top: 50px;
+	position: absolute;
+
+}
+#house{
+	margin-left: 20px;
+	margin-top: 40px;
+	height: 350px;
+	position: absolute;
+}
+.message{
+	font-size: 18pt;
+	margin: 6px;
+}
+#warning{
+	width: 500px;
+	opacity: 0;
+	position: absolute;
+	left: 50%;
+	margin-left: -250px;
+}
